apps/vcluster-deploykf/overlays/ops/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-ingress
  namespace: vcluster-deploykf
spec:
  ingressClassName: nginx 
  rules:
  - host: "k8s-deploykf.cluster.sciops.net"
    http:
      paths:
      - backend:
          service:
            name: vcluster
            port: 
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - "k8s-deploykf.cluster.sciops.net"
