apps/vcluster-deploykf/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-deploykf
  namespace: vcluster-deploykf
  annotations:
    link.argocd.argoproj.io/external-link: https://k8s.deploykf.cluster.sciops.net
spec:
  hosts:
    - "k8s.deploykf.cluster.sciops.net"
  gateways:
    - istio-system/istio-ingressgateway
  # tls:
  #   - match:
  #       - sniHosts:
  #           - "k8s.deploykf.cluster.sciops.net"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vcluster.vcluster-deploykf.svc.cluster.local
            port:
              number: 443
